feat: 핫토픽 뉴스 이미지 가져오는 로직 구현